Replicating what I did on Railway